--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ features = ["runtime-tokio-rustls", "tls"]
 version = "0.5"
 
 [dependencies.tokio]
-features = ["fs", "macros", "rt"]
+features = ["macros", "rt-multi-thread"]
 version = "1"
 
 [dev-dependencies]
