--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,19 @@ readme = "README.md"
 repository = "https://www.github.com/Iron-E/winvoice-server"
 
 [dependencies]
-uuid = {features = ["v4"], version = "1"}
 async-trait = {optional = true, version = "0.1"}
-axum = {optional = true, version = "0.6"}
+axum = {features = ["headers"], optional = true, version = "0.6"}
 axum-server = {optional = true, features = ["tls-rustls"], version = "0.5"}
 clap = {features = ["derive"], optional = true, version = "4"}
 futures = {optional = true, version = "0.3"}
 headers = {optional = true, version = "0.3"}
 humantime = {optional = true, version = "2"}
 money2 = {features = ["serde"], version = "0.8"}
-once_cell = "1"
 serde = "1"
 sqlx = {features = ["runtime-tokio-rustls", "tls"], optional = true, version = "0.5"}
 tokio = {features = ["macros", "rt-multi-thread"], optional = true, version = "1"}
 tower = {features = ["timeout"], optional = true, version = "0.4"}
+uuid = {features = ["v4"], optional = true, version = "1"}
 
 [dependencies.tower-http]
 features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "validate-request"]
@@ -67,6 +66,19 @@ dotenvy = "0.15"
 pretty_assertions = "1"
 
 [features]
+bin = [
+	"async-trait",
+	"axum",
+	"axum-server",
+	"clap",
+	"futures",
+	"headers",
+	"humantime",
+	"sqlx",
+	"tokio",
+	"tower",
+	"tower-http",
+	"uuid",
+]
 default = ["postgres"]
-bin = ["async-trait", "axum", "axum-server", "clap", "futures", "headers", "humantime", "sqlx", "tokio", "tower", "tower-http"]
 postgres = ["bin", "winvoice-adapter-postgres", "sqlx/postgres"]
