feat: logout API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = "1"
 sqlx = {features = ["runtime-tokio-rustls", "tls"], optional = true, version = "0.5"}
 tokio = {features = ["macros", "rt-multi-thread"], optional = true, version = "1"}
 tower = {features = ["timeout"], optional = true, version = "0.4"}
-uuid = {features = ["v4"], optional = true, version = "1"}
+uuid = {features = ["serde", "v4"], version = "1"}
 
 [dependencies.tower-http]
 features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd"]
@@ -78,7 +78,6 @@ bin = [
 	"tokio",
 	"tower",
 	"tower-http",
-	"uuid",
 ]
 default = ["postgres"]
 postgres = ["bin", "winvoice-adapter-postgres", "sqlx/postgres"]
