--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ tower = {features = ['timeout'], optional = true, version = '0.4'}
 tracing = {optional = true, version = '0.1'}
 tracing-appender = {optional = true, version = '0.2'}
 tracing-subscriber = {optional = true, version = '0.3'}
+tracing-test = {optional = true, version = '0.2'}
 watchman_client = {optional = true, version = '0.8'}
 
 [dependencies.tower-http]
@@ -95,6 +96,7 @@ bin = [
 	'tracing',
 	'tracing-appender',
 	'tracing-subscriber',
+	'tracing-test',
 	'watchman_client',
 	'winvoice-adapter',
 	'winvoice-export',
