--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = 'https://www.github.com/Iron-E/winvoice-server'
 
 [dependencies]
 argon2 = {optional = true, version = '0.5'}
+async-session = {optional = true, version = '3'}
 async-trait = {optional = true, version = '0.1'}
 axum = {features = ['headers'], optional = true, version = '0.6'}
 axum-login = {features = ['sqlx'], optional = true, version = '0.5'}
@@ -76,6 +77,7 @@ pretty_assertions = '1'
 [features]
 bin = [
 	'argon2',
+	'async-session',
 	'async-trait',
 	'axum',
 	'axum-login',
