--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ money2 = {features = ['serde'], optional = true, version = '0.8'}
 rand = {optional = true, version = '0.8'}
 semver = {optional = true, version = '1'}
 serde = '1'
+serde_json = {optional = true, version = '1'}
 sqlx = {features = ['runtime-tokio-rustls', 'tls'], optional = true, version = '0.6'}
 tokio = {features = ['macros', 'rt-multi-thread'], optional = true, version = '1'}
 tower = {features = ['timeout'], optional = true, version = '0.4'}
@@ -75,7 +76,6 @@ git = 'https://github.com/Iron-E/winvoice-schema'
 dotenvy = '0.15'
 pretty_assertions = '1'
 regex = "1"
-serde_json = "1"
 
 [features]
 bin = [
@@ -94,6 +94,7 @@ bin = [
 	'money2',
 	'rand',
 	'semver',
+	'serde_json',
 	'sqlx',
 	'tokio',
 	'tower',
