--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,7 @@ money2 = {features = ['serde'], optional = true, version = '0.8'}
 rand = {optional = true, version = '0.8'}
 semver = {optional = true, version = '1'}
 serde = '1'
-serde_json = {optional = true, version = '1'}
-sqlx = {features = ['runtime-tokio-rustls', 'tls'], optional = true, version = '0.6'}
+sqlx = {features = ['json', 'runtime-tokio-rustls', 'tls'], optional = true, version = '0.6'}
 tokio = {features = ['macros', 'rt-multi-thread'], optional = true, version = '1'}
 tower = {features = ['timeout'], optional = true, version = '0.4'}
 tracing = {optional = true, version = '0.1'}
@@ -90,7 +89,6 @@ bin = [
 	'money2',
 	'rand',
 	'semver',
-	'serde_json',
 	'sqlx',
 	'tokio',
 	'tower',
