--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = 'README.md'
 repository = 'https://www.github.com/Iron-E/winvoice-server'
 
 [dependencies]
-argon2 = {optional = true, version = '0.5'}
+argon2 = '0.5'
 async-trait = {optional = true, version = '0.1'}
 axum = {features = ['headers'], optional = true, version = '0.6'}
 axum-login = {features = ['sqlx'], optional = true, version = '0.5'}
@@ -69,6 +69,7 @@ features = ['serde']
 git = 'https://github.com/Iron-E/winvoice-schema'
 
 [dev-dependencies]
+axum-test-helper = {version = '0.3', default-features = false, features = ['cookies', 'withouttrace']}
 dotenvy = '0.15'
 pretty_assertions = '1'
 regex = "1"
@@ -77,7 +78,6 @@ tracing-test = '0.2'
 
 [features]
 bin = [
-	'argon2',
 	'async-trait',
 	'axum',
 	'axum-login',
