--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ git = 'https://github.com/Iron-E/winvoice-schema'
 
 [dev-dependencies]
 axum-test-helper = {version = '0.3', default-features = false, features = ['cookies', 'withouttrace']}
+mockd = {features = ["address", "company", "contact", "currency", "datetime", "internet", "job", "password", "name", "words"], version = "0.4"}
 dotenvy = '0.15'
 pretty_assertions = '1'
 regex = "1"
