--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,8 +70,9 @@ git = 'https://github.com/Iron-E/winvoice-schema'
 
 [dev-dependencies]
 axum-test-helper = {version = '0.3', default-features = false, features = ['cookies', 'withouttrace']}
-mockd = {features = ["address", "company", "contact", "currency", "datetime", "internet", "job", "password", "name", "words"], version = "0.4"}
+csv = "1"
 dotenvy = '0.15'
+mockd = {features = ["address", "company", "contact", "currency", "datetime", "internet", "job", "password", "name", "words"], version = "0.4"}
 pretty_assertions = '1'
 regex = "1"
 serde_json = "1"
