--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = 'README.md'
 repository = 'https://www.github.com/Iron-E/winvoice-server'
 
 [dependencies]
-argon2 = '0.5'
+argon2 = {features = ['std'], version = '0.5'}
 async-trait = {optional = true, version = '0.1'}
 axum = {features = ['headers'], optional = true, version = '0.6'}
 axum-login = {features = ['sqlx'], optional = true, version = '0.5'}
