--- a/compose.yaml
+++ b/compose.yaml
@@ -30,7 +30,7 @@ services:
       POSTGRES_USER_FILE: '/run/secrets/db-user'
     expose: [5432]
     healthcheck:
-      test: ['CMD', 'pg_isready']
+      test: ['CMD-SHELL', 'pg_isready --dbname "$(cat /run/secrets/db-name)" --username "$(cat /run/secrets/db-user)"']
       interval: '10s'
       timeout: '5s'
       retries: 5
