--- a/compose.yaml
+++ b/compose.yaml
@@ -74,6 +74,7 @@ services:
     entrypoint: ['/bin/sh', '-c']
     command: >-
         'winvoice-server
+        --address 0.0.0.0:3000
         --certificate /run/secrets/ssl/cert.pem --key /run/secrets/ssl/key.pem
         --cors-allow-origin /run/secrets/cors/allow.txt
         --permissions-model /permissions-model --permissions-policy /run/secrets/permissions-policy
