build(compose): use current dir for as context
Using github tag requires it to resolve our own URL. In reality, it is
best to allow users to specify whatever version they want to build and
have the compose file build that.

--- a/compose.yaml
+++ b/compose.yaml
@@ -45,7 +45,7 @@ services:
 
   server:
     image: 'winvoice/server:v0.6.2'
-    build: 'https://github.com/Iron-E/winvoice-server.git#v0.6.2'
+    build: '.'
 
     depends_on:
       db: {condition: 'service_healthy'}
